--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <title>Acquisto Biglietto</title>
 </head>
 <body>
-  
 
-
-
-
+  <h1 id="output">Il prezzo da pagare sarà: </h1>
 
   <script src="js/script.js"></script>
 </body>
